# waagent-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RESOURCES.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-msi.yml  build.yml  check-az-auth.yml  check-vm-agent-status.yml  codeql.yml  deb-release.yml  rpm-release.yml  scorecard.yml
deb/maintainer-scripts/: postinst
init/systemd/: waagent-rs.service  waagent.rs.service
installer/: waagent-rs.wxs
rpm/: waagent-rs.spec
waagent-core/: Cargo.toml
waagent-core/src/: lib.rs  system.rs
waagent-core/src/config/: defaults.rs  mod.rs  parser.rs  schema.rs  show.rs  types.rs
waagent-core/src/network/firewall/: mod.rs  unix.rs  windows.rs
waagent-core/src/system/: mod.rs
waagent-core/src/utils/: fileutils.rs  mod.rs
waagent-core/tests/: tests.rs
waagent-core/tests/config/: config_tests.rs
waagent-core/tests/config/data/: waagent-test.conf
waagent-core/tests/system/: info_tests.rs  mod.rs  stats_tests.rs
waagent-extensions/: Cargo.toml
waagent-poc/: Cargo.toml
waagent-poc/src/: main.rs
waagent-poc/sudoers.d/: waagent-rs
waagent-poc/wix/: main.wxs
waagent-rs/: Cargo.toml
waagent-rs/src/: main.rs
