[workspace]
resolver = "2"
members = [
    "waagent-rs",
    "waagent-core",
    "waagent-poc",
]

[workspace.dependencies]
# Serialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tracing = "0.1.41"

# Utility
anyhow = "1.0"

# Tokio / Async
tokio = { version = "1", features = ["signal", "process", "macros", "rt-multi-thread"] }

sysinfo = "0.37"

winapi = { version = "0.3", features = ["sysinfoapi"] }
