[workspace]
resolver = "2"
members = [
    "waagent-rs",
    "waagent-core",
    "waagent-poc",
]

[workspace.dependencies]
# Serialization
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Utility
anyhow = "1.0"
uuid = { version = "1.18.0", features = ["v3", "v4", "v5", "v8"] }
clap = { version = "4.5.45", features = ["derive" ] }

# Tokio / Async
tokio = { version = "1", features = ["signal", "process", "macros", "rt-multi-thread"] }

sysinfo = "0.37"

winapi = { version = "0.3", features = ["sysinfoapi"] }
