[package]
name = "waagent-rs"
version = "0.1.0"
edition = "2021"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
authors = [
    "Alexander Kassap <alkassap@microsoft.com>",
    "Alf Delgado Helleseter <adelgadohell@microsoft.com>",
    "Álvaro Figueroa <alvarof@microsoft.com>",
    "Arun Kumar <arukum@microsoft.com>",
    "Carlos De Avillez <Carlos.DeAvillez@microsoft.com",
    "Daniel Cherrett <dcherrett@microsoft.com>",
    "Enrique Sanchez Vela <enrique.sanchezvela@microsoft.com>",
    "Francisco Ortiz <frortizl@microsoft.com>",
    "Greg Diaz <gregdiaz@microsoft.com>",
    "James Immer <jamesimmer@microsoft.com>",
    "Jonathan Brenes <jbrenes@microsoft.com>",
    "Manish Kumawat <mkumawat@microsoft.com>",
    "Mitchelle Tenorio Quesada <mitenori@microsoft.com>",
    "Shawn Trockman <shawntr@microsoft.com>",
    "Travis Sharp <trsharp@microsoft.com>",
]

[[bin]]
name = "waagent"
path = "src/main.rs"

[dependencies]
waagent-core = { path = "../waagent-core" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

[target."cfg(windows)".dependencies]

[build-dependencies]

[target."cfg(unix)".build-dependencies]

[dev-dependencies]

[features]
